save to excel works

--- a/csharp/MatchResultsToExcel/MatchResultsToExcel.csproj
+++ b/csharp/MatchResultsToExcel/MatchResultsToExcel.csproj
@@ -9,7 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="8.1.0" />
     <PackageReference Include="Scopos.BabelFish" Version="1.9.2.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
